# pyproject-toml-vs-setup-dot-py-demo

./: README.md  pyproject.toml  requirements.txt  setuppp.py
src/my-proj/: calculate_multiplication.py
